--- a/Regression Models - Week 1.Rmd
+++ b/Regression Models - Week 1.Rmd
@@ -4,19 +4,59 @@
 
 Consider the data set given below
 
+```{r}
 x <- c(0.18, -1.54, 0.42, 0.95)
+```
 
 And weights given by
 
+```{r}
 w <- c(2, 1, 3, 1)
+```
 
 Give the value of ?? that minimizes the least squares equation ???ni=1wi(xi?????)2
 
-1.077
-0.300
-0.0025
-0.1471
+* 1.077
+* 0.300
+* 0.0025
+* 0.1471
 
+**Answer:**
+
+The value that minimizes that sum is simply the average of the values in x.
+
+The weights imply how many times you see a particular value.  You would see 0.18 2 times, -1.54 1 time, 0.42 3 times and 0.95 1 time. As such, we have 7 numbers in total.
+
+If you want to find the actual mean / average of this:
+
+```{r}
+values <- (0.18 + 0.18 - 1.54 + 0.42 + 0.42 + 0.42 + 0.95)
+numberElements <- 7
+mu <- values / numberElements
+mu
+```
+
+OR using R
+
+```{r}
+mu <- sum(x*w) / sum(w)
+mu
+```
+
+This would be the value that minimizes that weighted sum of square differences.
+
+In general, if you want to optimize a function for a single parameter, you can use the optimize function
+
+```{r}
+optimize( function(u){ sum(w*(x-u)^2) }, interval=c(-100,100))
+```
+
+Plot
+
+```{r}
+obj <- function(U){sapply(U, function(u) sum(w*(x-u)^2))}
+curve(obj, from=-2, to=2)
+```
 
 ## Question 2
 
