--- a/Regression Models - Week 1.Rmd
+++ b/Regression Models - Week 1.Rmd
@@ -19,7 +19,7 @@ Give the value of ?? that minimizes the least squares equation ???ni=1wi(xi?????
 * 1.077
 * 0.300
 * 0.0025
-* 0.1471
+* **0.1471**
 
 **Answer:**
 
@@ -67,87 +67,197 @@ y <- c(1.39, 0.72, 1.55, 0.48, 1.19, -1.59, 1.23, -0.65, 1.49, 0.05)
 
 Fit the regression through the origin and get the slope treating y as the outcome and x as the regressor. (Hint, do not center the data since we want regression through the origin, not through the means of the data.)
 
--1.713
-0.8263
--0.04462
-0.59915
+* -1.713
+* **0.8263**
+* -0.04462
+* 0.59915
+
+**Answer:**
+
+```{r}
+x <- c(0.8, 0.47, 0.51, 0.73, 0.36, 0.58, 0.57, 0.85, 0.44, 0.42)
+y <- c(1.39, 0.72, 1.55, 0.48, 1.19, -1.59, 1.23, -0.65, 1.49, 0.05)
+
+# omit the intercept (-1)
+lm(y ~ x-1)
+```
 
 ## Question 3
 
 Do data(mtcars) from the datasets package and fit the regression model with mpg as the outcome and weight as the predictor. Give the slope coefficient.
 
--9.559
-0.5591
--5.344
-30.2851
+* -9.559
+* 0.5591
+* **-5.344**
+* 30.2851
+
+**Answer:**
+
+```{r}
+data(mtcars)
+## does "and fit the regression model" mean centre it?
+
+y <- mtcars$mpg # outcome
+x <- mtcars$wt  # predictor
+
+lm(y ~ x)
+```
 
 ## Question 4
 
 Consider data with an outcome (Y) and a predictor (X). The standard deviation of the predictor is one half that of the outcome. The correlation between the two variables is .5. What value would the slope coefficient for the regression model with Y as the outcome and X as the predictor?
 
-4
-3
-1
-0.25
+* 4
+* 3
+* **1**
+* 0.25
+
+**Answer:**
+
+```{r}
+sx <- 1/2
+sy <- 1
+cor <- .5
+cor * sy / sx
+
+# Find the slope as a function of relative standard deviations and correlation
+# http://en.wikipedia.org/wiki/Simple_linear_regression
+
+# \hat{\beta} = r_{xy} \frac{s_y}{s_x}
+#             = 0.5 * 2
+#             = [[1]]
+```
+
 
 ## Question 5
 
 Students were given two hard tests and scores were normalized to have empirical mean 0 and variance 1. The correlation between the scores on the two tests was 0.4. What would be the expected score on Quiz 2 for a student who had a normalized score of 1.5 on Quiz 1?
 
-0.16
-0.4
-0.6
-1.0
+* 0.16
+* 0.4
+* **0.6**
+* 1.0
+
+**Answer:**
+
+```{r}
+1.5*.4
+
+# http://en.wikipedia.org/wiki/Simple_linear_regression we have
+
+# \hat{\beta} = r_{xy} \frac{s_y}{s_x}
+#             = 0.4 * 1
+#             = 0.4
+
+# \hat{\alpha} = \bar{y} - \hat{\beta} \bar{x}
+#              = 0 - 0.4 * 0
+
+# \hat{y} = \hat{\alpha} + \hat{\beta} x
+#         = 0 + 1.5 * 0.4
+#         = [[0.6]]
+```
 
 ## Question 6
 
 Consider the data given by the following
 
+```{r}
 x <- c(8.58, 10.46, 9.01, 9.64, 8.86)
+```
+
 What is the value of the first measurement if x were normalized (to have mean 0 and variance 1)?
 
-9.31
-8.86
-8.58
--0.9719
+* 9.31
+* 8.86
+* 8.58
+* **-0.9719**
+
+**Answer:**
+
+```{r}
+# The process of centering then scaling the data is called normalizing the data.
+((x-mean(x)) / sd(x))[1]
+
+scale(x)[1]
+```
+
 
 ## Question 7
 
 Consider the following data set (used above as well). What is the intercept for fitting the model with x as the predictor and y as the outcome?
 
+```{r}
 x <- c(0.8, 0.47, 0.51, 0.73, 0.36, 0.58, 0.57, 0.85, 0.44, 0.42)
 y <- c(1.39, 0.72, 1.55, 0.48, 1.19, -1.59, 1.23, -0.65, 1.49, 0.05)
-1.567
--1.713
-2.105
-1.252
+```
+
+* **1.567**
+* -1.713
+* 2.105
+* 1.252
+
+**Answer:**
+
+```{r}
+lm(y ~ x)
+
+b1 <- cor(x,y)*sd(y)/sd(x)
+b0 <- mean(y) - b1 * mean(x) # intercept
+b0
+```
 
 ## Question 8
 
 You know that both the predictor and response have mean 0. What can be said about the intercept when you fit a linear regression?
 
-It must be identically 0.
-It must be exactly one.
-Nothing about the intercept can be said from the information given.
-It is undefined as you have to divide by zero.
+* **It must be identically 0.**
+* It must be exactly one.
+* Nothing about the intercept can be said from the information given.
+* It is undefined as you have to divide by zero.
+
+**Answer:**
+
+$\hat{\alpha}$ = $\bar{y}$ - $\hat{\beta} \bar{x}$
+
+             = 0 - z * 0
+        
+             = [[0]]
+
 
 ## Question 9
 
 Consider the data given by
 
+```{r}
 x <- c(0.8, 0.47, 0.51, 0.73, 0.36, 0.58, 0.57, 0.85, 0.44, 0.42)
+```
+
 What value minimizes the sum of the squared distances between these points and itself?
 
-0.573
-0.8
-0.36
-0.44
+* **0.573**
+* 0.8
+* 0.36
+* 0.44
+
+**Answer:**
+
+```{r}
+# mean is the centre of the mass
+mean(x)
+
+sum((x-0.573)^2)
+sum((x-0.8)^2)
+sum((x-0.36)^2)
+sum((x-0.44)^2)
+```
 
 ## Question 10
 
 Let the slope having fit Y as the outcome and X as the predictor be denoted as ??1. Let the slope from fitting X as the outcome and Y as the predictor be denoted as ??1. Suppose that you divide ??1 by ??1; in other words consider ??1/??1. What is this ratio always equal to?
 
-Var(Y)/Var(X)
-2SD(Y)/SD(X)
-1
-Cor(Y,X)
+* **Var(Y)/Var(X)**
+* 2SD(Y)/SD(X)
+* 1
+* Cor(Y,X)
+
+**Answer:**
